--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,11 +10,159 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Friend Finder Survey</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <h1>Survey Questions</h1>
+        <hr>
+        <h3>
+            <strong>
+                About You
+            </strong>
+        </h3>
+        <h4>
+            Name (Required)
+        </h4>
+        <input type="text" id="name" class="form-control" required>
+        <h4>
+            Link to Photo of Yourself (Required)
+        </h4>
+        <input type="text" id="photo" class="form-control" required>
+        <hr>
+
+        <h3>
+            Question 1
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 2
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 3
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 4
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 5
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 6
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 7
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 8
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 9
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+        <br><br>
+        <h3>
+            Question 10
+        </h3>
+        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <select class="quiz-select" id="q1">
+            <option value="">Select an answer below:</option>
+            <option value="1">1 (Strongly Disagree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
