Create basic html skeleton

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,6 +25,9 @@
                 <button class="btn btn-lg btn-dark text-white">Find Your BEST Friend Now!</button>
             </a>
         </div>
+        <span>
+            <a href="/api/friends">API Friends</a> | <a href="https://github.com/baang/">GitHub Repo</a>
+        </span> 
     </div>
 
     <!-- Optional JavaScript -->
