--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -161,6 +161,8 @@
             <option value="4">4</option>
             <option value="5">5 (Strongly Agree)</option>
         </select>
+        <br><br>
+        <button type="submit" class="btn btn-lg bg-dark text-white btn-block text-center" id="submit">Submit</button>
 
     </div>
 
