--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -35,7 +35,7 @@
         <h3>
             Question 1
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You love to dance, but only in front of the mirror in your room.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -48,7 +48,7 @@
         <h3>
             Question 2
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You don't have a favorite color, or your favorite color is gray.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -61,7 +61,7 @@
         <h3>
             Question 3
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You're a dog person. </h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -74,7 +74,7 @@
         <h3>
             Question 4
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You don't need to take pictures of your food to enjoy it.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -87,7 +87,7 @@
         <h3>
             Question 5
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You like to spend all your spare time inside.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -100,7 +100,7 @@
         <h3>
             Question 6
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You would rather go out to a popular restaurant to eat.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -113,7 +113,7 @@
         <h3>
             Question 7
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You love being the hustle and bustle of the big city.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -126,7 +126,7 @@
         <h3>
             Question 8
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You love just laying around with a good book.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -139,7 +139,7 @@
         <h3>
             Question 9
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>Music festivals are one of your favorite events to go to.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -152,7 +152,7 @@
         <h3>
             Question 10
         </h3>
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore natus aliquid pariatur sint ad libero consequatur saepe, voluptatibus commodi sequi. Dolores sequi doloremque ducimus quibusdam autem, maiores impedit est. Ullam.</h5>
+        <h5>You would rather shower in the evening than at night.</h5>
         <select class="quiz-select" id="q1">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
