--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -179,9 +179,9 @@
     <script>
         $("#submit").on("click", function () {
             userInput = [];
-            for (var i = 0; i < 10; i++) {
-               var inputVal = parseInt($('#q' + i + ' option:selected').val());
-                userInput.push(inputVal);
+            for (var i = 1; i < 11; i++) {
+               var inputVal = $('#q' + i + ' option:selected').val();
+                userInput.push(parseFloat(inputVal));
             }
             
             
