--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,6 +10,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <style>
+        .container {
+            margin: 50px auto;
+            /* border: 1px solid black; */
+            border-radius: 12px;
+            background-color: #007bff;
+        }
+
+        input,
+        button {
+            margin: 10px auto;
+        }
+
+        h1,
+        h3,
+        h4 {
+            color: white;
+        }
+
+        h5 {
+            color: white;
+        }
+
+        .modal-body,
+        .modal-title {
+            color: black !important;
+        }
+
+        .submit {
+            margin: 20px !important;
+        }
+    </style>
+
     <title>Friend Finder Survey</title>
 </head>
 
@@ -162,7 +195,35 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br><br>
-        <button type="submit" class="btn btn-lg bg-dark text-white btn-block text-center" id="submit">Submit</button>
+
+        <!-- Button trigger modal -->
+        <button type="button" id="submit" class="btn btn-primary btn-block btn-dark text-white" data-toggle="modal"
+            data-target="#friendModal">
+            Submit
+        </button>
+        <br>
+
+        <!-- Modal -->
+        <div class="modal fade" id="friendModal" tabindex="-1" role="dialog" aria-labelledby="friendModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="friendModalLabel">Here's your new best friend!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary btn-lg btn-block"
+                            data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
@@ -213,13 +274,22 @@
                     }
                     console.log(diffArray + " is the totalDiffs per friend object.")
                     console.log(findLeastDiff(diffArray) + " is the index of lowest number in the array.")
+                    var n = findLeastDiff(diffArray)
 
+                    var friendMatch = $("<h2>")
+                    friendMatch.append("Name:</h2> " + data[n].name + "<hr>")
+                    var img = $("<img>")
+                    img.attr("src", data[n].photo)
+                    img.attr("width", "200px")
+                    friendMatch.append(img)
+                    $(".modal-body").html(friendMatch)
+
+                    $.post('api/friends', quizAnswers)
+                        .then(function (data) {
+                            console.log(data);
+                        })
                 })
 
-            $.post('api/friends', quizAnswers)
-                .then(function (data) {
-                    console.log(data);
-                })
 
 
             function findLeastDiff(array) {
