--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -146,7 +146,7 @@
         <h3>
             Question 7
         </h3>
-        <h5>You love being the hustle and bustle of the big city.</h5>
+        <h5>You love being in the hustle and bustle of the big city.</h5>
         <select class="quiz-select" id="q7">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -185,7 +185,7 @@
         <h3>
             Question 10
         </h3>
-        <h5>You would rather shower in the evening than at night.</h5>
+        <h5>You would rather shower in the evening than in the morning.</h5>
         <select class="quiz-select" id="q10">
             <option value="">Select an answer below:</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -239,6 +239,8 @@
         crossorigin="anonymous"></script>
     <script>
         $("#submit").on("click", function () { //Submit button function
+       
+
             userInput = [];
             for (var i = 1; i < 11; i++) { //Retrieves and stores answer data
                 var inputVal = $('#q' + i + ' option:selected').val();
